# lynx-textra

./: .gitignore  .tools_shared
.github/: CODEOWNERS
.github/workflows/: ci.yml
demos/darwin/macos/mtl/: mtl_app_demo_skity.mm
demos/darwin/macos/ttreaderdemo/: paragraph_test.cc  paragraph_test.h
demos/harmony/PerfTest/: build-profile.json5
demos/harmony/PerfTest/entry/: CMakeLists.txt  build-profile.json5  oh-package.json5
demos/harmony/PerfTest/entry/src/main/cpp/: napi_init.cc  napi_init.h  oh_drawing_newapi_test.cc  oh_drawing_newapi_test.h  oh_drawing_test.cc  oh_drawing_test.h  textra_test.cc  textra_test.h
demos/harmony/PerfTest/entry/src/main/cpp/types/libperftest/: Index.d.ts  oh-package.json5
demos/harmony/PerfTest/entry/src/main/ets/pages/: Index.ets  TextNativeNewRenderNode.ets  TextNativeRenderNode.ets  TextRenderNode.ets  TextraRenderNode.ets
examples/json_parser/: json_parser.cc
platform/harmony/lynxtextra/: CMakeLists.txt
public/textra/: font_info.h  layout_definition.h  layout_drawer_listener.h  paragraph.h  style.h  tt_color.h  tttext_context.h
src/ports/: platform_helper.cc
src/textlayout/: layout_drawer.cc  layout_measurer.cc  layout_measurer.h  paragraph_impl.cc  paragraph_impl.h  text_layout.cc  text_layout_impl.cc  text_line_impl.cc  tt_shaper.h  tttext_context.cc
src/textlayout/run/: base_run.cc  base_run.h
src/textlayout/style/: style.cc  style_manager.cc  style_manager.h  tt_color.cc
test/: layout_drawer_test.cc  paragraph_image_test.cc  style_manager_test.cc  style_test.cc  test_utils.h  text_layout_test.cc
(+12 files in other folders)
